[FIX] - Ports page mobile collapse background-color

--- a/scss/pages/_ports.scss
+++ b/scss/pages/_ports.scss
@@ -161,7 +161,7 @@
           left: 50%;
           width: 200%;
           height: 100%;
-          background-color: $gray-light;
+          background-color: $off-white;
           z-index: -1;
           transform: translateX(-50%);
         }
@@ -215,6 +215,7 @@
         width: 150%;
         right: 50%;
         transform: translateX(50%);
+        display: none;
       }
     }
   }
